remove search button, fix layout bugs

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -61,7 +61,7 @@
 
       @media only screen and (min-width: 600px)  {
         .Container{
-            grid-template-rows: 40px 80px 110px auto 50px;
+            grid-template-rows: 40px auto auto auto 50px;
         }
     }
 
