--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -3,6 +3,7 @@
     grid-area: settings;
     /* background: #f2f4f5; */
     background-color: white;
+    padding: 15px;
 }
 
 .SettingsBody{
